# heat_strorage_web_app

./: .gitignore  .pylintrc  pyproject.toml  requirements.txt
.streamlit/: config.toml
heat_strorage_web_app/: test.py  web_app.py
heat_strorage_web_app/pde_calculations/: analysis_calcs.py  data_loader.py  data_plot.py  environment.py  flow.py  heat_pde.py  main.py  medium.py  sim_enums.py  simulations.py  vessel.py
heat_strorage_web_app/resources/: waermesenken.xlsx  warmequellen.xlsx
heat_strorage_web_app/web_application/: analysis_calcs.py  backend_connection.py  data_base_handle.py  param_enums.py  raw_data_section.py  result_section.py  sidebar_builder.py  st_data_loader.py  st_plot.py  web_app.py
